--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'java'
+    id 'application'
 }
+
+
 
 group 'hexlet.code'
 version '1.0-SNAPSHOT'
@@ -14,6 +17,14 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
+application {
+    mainClass = 'hexlet.code.App'
+}
+
 test {
     useJUnitPlatform()
+}
+
+compileJava {
+    options.release = 20
 }
