--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,10 @@
 
 # Ignore Gradle project-specific cache directory
 .gradle
+.gradle/
 
 # Ignore Gradle build output directory
-app/build
+app/build/
 
 **/logs/
 
