--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 #Folders
 
 # Ignore Gradle project-specific cache directory
-.gradle
+
 .gradle/
 
 # Ignore Gradle build output directory
@@ -26,7 +26,7 @@ app/build/
 
 .settings
 app/bin
-.project*
-.classpath
-.idea/
+app/.project*
+app/.classpath/
+app/.idea/
 .factorypath
