--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,4 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-#Folders
-
-# Ignore Gradle project-specific cache directory
-
-.gradle/
-
-# Ignore Gradle build output directory
-app/build/
-
-**/logs/
-
-.settings
-app/bin
-app/.project*
-app/.classpath/
-app/.idea/
-.factorypath
+app/.idea/*
+app/build/*
+.idea/*
+app/.gradle/*
